<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/secondary_rounded_shape">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/purple_trans_shape"
                android:padding="16dp"
                android:layout_margin="16dp">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/azkar"
                    android:textColor="@color/white"
                    android:textSize="32sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/name"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/fadl_azkar"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txt"
                    android:layout_centerHorizontal="true"
                    android:text="@string/advice"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="18sp" />


            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/morning_card"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAllCaps="false"
                    app:cardCornerRadius="8dp"
                    app:cardBackgroundColor="@color/purple_500"
                    android:layout_marginEnd="16dp">
                    <TextView
                        android:id="@+id/tv_morning"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/morning"
                        android:textSize="18sp"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="16dp"
                        android:textAlignment="center"
                        android:textColor="@color/white"/>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:id="@+id/evening_card"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAllCaps="false"
                    app:cardCornerRadius="8dp">
                    <TextView
                        android:id="@+id/tv_evening"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/evening"
                        android:textSize="18sp"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="16dp"
                        android:textAlignment="center"/>
                </androidx.cardview.widget.CardView>




            </LinearLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</layout>