<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animationView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/star"
            app:lottie_repeatMode="reverse" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/gradiant_shape"
                android:padding="16dp"
                tools:context=".ui.HomeFragment">

                <RelativeLayout
                    android:id="@+id/header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RelativeLayout
                        android:id="@+id/date_groub"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:background="@drawable/all_radius_shape"
                        android:orientation="horizontal"
                        android:padding="8dp">

                        <ImageView
                            android:id="@+id/date_icon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="4dp"
                            android:src="@drawable/ic_baseline_date_range_24" />

                        <TextView
                            android:id="@+id/gregorian_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toEndOf="@id/date_icon"
                            android:text="2 JAN 2022"
                            android:textColor="@color/white"
                            android:textSize="14sp"
                            android:textStyle="bold" />
                    </RelativeLayout>

                    <LinearLayout
                        android:id="@+id/location_groub"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/date_groub"
                        android:layout_alignStart="@+id/date_groub"
                        android:layout_alignEnd="@id/date_groub"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/all_radius_shape"
                        android:orientation="horizontal"
                        android:paddingTop="4dp"
                        android:paddingBottom="4dp">

                        <TextView
                            android:id="@+id/time_zone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Cairo"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="16sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/next_pray"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_above="@id/all_time"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:layout_toEndOf="@id/date_groub"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Fajer"
                            android:textColor="@color/white"
                            android:textSize="20sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="5:18 AM"
                            android:textColor="@color/white"
                            android:textSize="24sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/all_time"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_below="@+id/location_groub"
                        android:layout_marginTop="40dp"
                        android:orientation="horizontal">

                        <RelativeLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginEnd="4dp"
                            android:layout_weight="1"
                            android:background="@drawable/all_radius_shape"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/icon"
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:layout_centerHorizontal="true"
                                android:src="@drawable/fagr"
                                app:tint="@color/teal_200" />


                            <TextView
                                android:id="@+id/tv_pray_fagr"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/icon"
                                android:maxLines="1"
                                android:text="@string/fajr"
                                android:textAlignment="center"
                                android:textColor="@color/white"
                                android:textSize="18sp" />

                            <TextView
                                android:id="@+id/fagr"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/tv_pray_fagr"
                                android:text="5:18"
                                android:textAlignment="center"
                                android:textColor="@color/white"
                                android:textSize="20sp"
                                android:textStyle="bold" />


                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginEnd="4dp"
                            android:layout_weight="1"
                            android:background="@drawable/all_radius_shape"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/icon2"
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:layout_centerHorizontal="true"
                                android:src="@drawable/dhohr"
                                app:tint="@color/teal_200" />


                            <TextView
                                android:id="@+id/tv_pray_dhuhr"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/icon2"
                                android:maxLines="1"
                                android:text="@string/dhuhr"
                                android:textAlignment="center"
                                android:textColor="@color/white"
                                android:textSize="18sp" />

                            <TextView
                                android:id="@+id/dhohr"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/tv_pray_dhuhr"
                                android:text="5:18"
                                android:textAlignment="center"
                                android:textColor="@color/white"
                                android:textSize="20sp"
                                android:textStyle="bold" />


                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginEnd="4dp"
                            android:layout_weight="1"
                            android:background="@drawable/all_radius_shape"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/icon3"
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:layout_centerHorizontal="true"
                                android:src="@drawable/asr"
                                app:tint="@color/teal_200" />


                            <TextView
                                android:id="@+id/tv_pray_asr"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/icon3"
                                android:maxLines="1"
                                android:text="@string/asr"
                                android:textAlignment="center"
                                android:textColor="@color/white"
                                android:textSize="18sp" />

                            <TextView
                                android:id="@+id/aser"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/tv_pray_asr"
                                android:text="5:18"
                                android:textAlignment="center"
                                android:textColor="@color/white"
                                android:textSize="20sp"
                                android:textStyle="bold" />


                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginEnd="4dp"
                            android:layout_weight="1"
                            android:background="@drawable/all_radius_shape"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/icon4"
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:layout_centerHorizontal="true"
                                android:src="@drawable/maghrb"
                                app:tint="@color/teal_200" />


                            <TextView
                                android:id="@+id/tv_pray_maghrb"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/icon4"
                                android:maxLines="1"
                                android:text="@string/maghrb"
                                android:textAlignment="center"
                                android:textColor="@color/white"
                                android:textSize="18sp" />

                            <TextView
                                android:id="@+id/maghreb"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/tv_pray_maghrb"
                                android:text="5:18"
                                android:textAlignment="center"
                                android:textColor="@color/white"
                                android:textSize="20sp"
                                android:textStyle="bold" />


                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginEnd="4dp"
                            android:layout_weight="1"
                            android:background="@drawable/all_radius_shape"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/icon5"
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:layout_centerHorizontal="true"
                                android:padding="4dp"
                                android:src="@drawable/isha"
                                app:tint="@color/teal_200" />


                            <TextView
                                android:id="@+id/tv_pray_isha"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/icon5"
                                android:maxLines="1"
                                android:text="@string/isha"
                                android:textAlignment="center"
                                android:textColor="@color/white"
                                android:textSize="18sp" />

                            <TextView
                                android:id="@+id/isha"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/tv_pray_isha"
                                android:text="5:18"
                                android:textAlignment="center"
                                android:textColor="@color/white"
                                android:textSize="20sp"
                                android:textStyle="bold" />


                        </RelativeLayout>
                    </LinearLayout>

                </RelativeLayout>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/header"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="4dp"
                    tools:ignore="MissingDefaultResource">

                    <RelativeLayout
                        android:id="@+id/surah_item"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="16dp">

                        <TextView
                            android:id="@+id/zekr"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="10dp"
                            android:fontFamily="@font/cairo_semibold"
                            android:text="اللّهُ لاَ إِلَـهَ إِلاَّ هُوَ الْحَيُّ الْقَيُّومُ لاَ تَأْخُذُهُ سِنَةٌ وَلاَ نَوْمٌ لَّهُ مَا فِي السَّمَاوَاتِ وَمَا فِي الأَرْضِ مَن ذَا الَّذِي يَشْفَعُ عِنْدَهُ إِلاَّ بِإِذْنِهِ يَعْلَمُ مَا بَيْنَ أَيْدِيهِمْ وَمَا خَلْفَهُمْ وَلاَ يُحِيطُونَ بِشَيْءٍ مِّنْ عِلْمِهِ إِلاَّ بِمَا شَاء وَسِعَ كُرْسِيُّهُ السَّمَاوَاتِ وَالأَرْضَ وَلاَ يَؤُودُهُ حِفْظُهُمَا وَهُوَ الْعَلِيُّ الْعَظِيمُ"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="18sp" />
                    </RelativeLayout>
                </com.google.android.material.card.MaterialCardView>



            </RelativeLayout>
        </ScrollView>
    </RelativeLayout>
</layout>